[gd_scene load_steps=3 format=3 uid="uid://di3o7arxxkvlg"]

[ext_resource type="Script" path="res://scripts/menus/pause_menu.gd" id="1_6s5uj"]
[ext_resource type="Theme" uid="uid://mf7q1nvgel6c" path="res://game_theme.tres" id="1_ucakg"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_6s5uj")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -108.0
offset_right = 100.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 184.0
offset_bottom = 200.0

[node name="Label" type="Label" parent="ColorRect/ColorRect"]
offset_left = 4.0
offset_top = 8.0
offset_right = 164.0
offset_bottom = 64.0
theme = ExtResource("1_ucakg")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "PAUSE"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 64.0
offset_right = 148.0
offset_bottom = 176.0

[node name="BackButton" type="Button" parent="ColorRect/ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ucakg")
text = "Back to Game"

[node name="SaveButton" type="Button" parent="ColorRect/ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ucakg")
text = "Save and Quit"

[node name="RestartButton" type="Button" parent="ColorRect/ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ucakg")
text = "Restart Game"
